[package]
name = "day04"
version = "0.1.0"
authors = ["Jérôme Mahuet <jerome.mahuet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
serde_scan = "0.4.1"
pest = "2.1.3"
pest_derive = "2.1.0"